# cinerag

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
docs/: architecture.md
eval/: eval_llm.py  eval_llm_metrics.py  eval_llm_queries.jsonl  eval_metrics.py  eval_queries.jsonl  eval_retrieval.py
flows/: tmdb_ingest.py
llm/: __init__.py  client.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: feedback-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml  provider.yml
reports/: llm_eval_results.json  retrieval_results.json
retrieval/: es_index.py  es_search.py  es_setup.py  hybrid.py  qdrant_search.py  qdrant_upsert.py  reranker.py
ui/: app.py
